unpackaged/main/default/objects/Contact/fields/Portal_Display_Density__c.field-meta.xml
<CustomField>
    <fullName>Portal_Display_Density__c</fullName>
    <description>All Custom List View Components being developed must apply this setting to their styling so that either the low density layout is rendered (Figma base) or the high density lists are rendered (as per pilot default)</description>
    <inlineHelpText>All Custom List View Components being developed must apply this setting to their styling so that either the low density layout is rendered (Figma base) or the high density lists are rendered (as per pilot default)</inlineHelpText>
    <label>Portal Display Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <default>true</default>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>