unpackaged/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>US-0009237 - Migrate contact fields for EU ads</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Branch manager</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Director - Business Development</fullName>
            </value>
            <value>
                <fullName>Director - IT</fullName>
            </value>
            <value>
                <fullName>Director - Marketing</fullName>
            </value>
            <value>
                <fullName>Director - branch office</fullName>
            </value>
            <value>
                <fullName>Director - HR</fullName>
            </value>
            <value>
                <fullName>Director - Product management</fullName>
            </value>
            <value>
                <fullName>Director - Project management</fullName>
            </value>
            <value>
                <fullName>Director - Support</fullName>
            </value>
            <value>
                <fullName>Director - technology</fullName>
            </value>
            <value>
                <fullName>Director - sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product management</fullName>
            </value>
            <value>
                <fullName>Project manager</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Member of the Board</fullName>
            </value>
            <value>
                <fullName>Chairman of the Board</fullName>
            </value>
            <value>
                <fullName>CEO / Managing Director</fullName>
            </value>
            <value>
                <fullName>Unit / Account Director</fullName>
            </value>
            <value>
                <fullName>Unit / Team Lead</fullName>
            </value>
            <value>
                <fullName>Planing Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>