unpackaged/main/default/objects/Contact/fields/PreferredContactTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactTime__c</fullName>
    <description>#US-0018726</description>
    <label>Preferred Contact Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>