unpackaged/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-5629 Contact - Quality &amp; Preference</description>
    <inlineHelpText>Contact that primarily manages seller-eBay relationship</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>