unpackaged/main/default/objects/Contact/fields/Tiering_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tiering_Contact__c</fullName>
    <description>US-0009237 - Migrate contact fields for EU ads</description>
    <label>Tiering (Contact)</label>
    <type>TextArea</type>
</CustomField>