unpackaged/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>US-0009689 - [PL Adv] Ads PL Team Mate to be able to view “Mailing State” and “Timezone” of Seller Contact</description>
    <formula>IF(CASE(EBH_MailingState__c, &#39;CA&#39;, 1, &#39;NV&#39;, 1,&#39;OR&#39;, 1, &#39;WA&#39;, 1, 0) &gt;=1, &quot;Pacific Standard Time&quot;, null)+ 
IF(CASE(EBH_MailingState__c, &#39;AZ&#39;, 1, &#39;CO&#39;, 1,&#39;ID&#39;, 1, &#39;MT&#39;, 1, &#39;NM&#39;, 1, &#39;UT&#39;, 1, &#39;WY&#39;, 1, 0) &gt;= 1, &quot;Mountain Standard Time&quot;, null)+ 
IF(CASE(EBH_MailingState__c, &#39;AL&#39;, 1, &#39;AR&#39;, 1, &#39;IL&#39;, 1, &#39;IA&#39;, 1,&#39;KS&#39;, 1, &#39;LA&#39;, 1,&#39;MN&#39;, 1,&#39;MS&#39;, 1,&#39;MO&#39;, 1,&#39;NE&#39;, 1,&#39;ND&#39;, 1, &#39;OK&#39;, 1,&#39;SD&#39;, 1,&#39;WI&#39;, 1, 0) &gt;= 1, &quot;Central Standard Time&quot;, null)+ 
IF(CASE(EBH_MailingState__c, &#39;CT&#39;, 1, &#39;DE&#39;, 1, &#39;GA&#39;, 1, &#39;ME&#39;, 1, &#39;MD&#39;, 1, &#39;MA&#39;, 1,&#39;MI&#39;, 1, &#39;NH&#39;, 1, &#39;NJ&#39;, 1, &#39;NY&#39;, 1, &#39;NC&#39;, 1, &#39;OH&#39;, 1, &#39;PA&#39;, 1, &#39;RI&#39;, 1, &#39;SC&#39;, 1, &#39;VT&#39;, 1, &#39;VA&#39;, 1, &#39;WV&#39;, 1, 0) &gt;= 1,&quot;Eastern Standard Time&quot;, null)+ 
IF(CASE(EBH_MailingState__c, &#39;AK&#39;, 1, 0) &gt;=1, &quot;Alaskan Standard Time&quot;, null)+ 
IF(CASE(EBH_MailingState__c, &#39;HI&#39;, 1, 0) &gt;=1, &quot;Hawaiian Standard Time&quot;, null)+ 
IF(EBH_MailingState__c = &#39;FL&#39;, IF(MID(Phone,2,3) = &quot;850&quot;,&quot;Central Standard Time&quot;,&quot;Eastern Standard Time&quot;),null)+ 
IF(EBH_MailingState__c = &#39;IN&#39;, IF(MID(Phone,2,3) = &quot;219&quot;,&quot;Central Standard Time&quot;,&quot;Eastern Standard Time&quot;),null)+ 
IF(EBH_MailingState__c = &#39;KY&#39;, IF(MID(Phone,2,3) = &quot;270&quot;,&quot;Central Standard Time&quot;,&quot;Eastern Standard Time&quot;),null)+ 
IF(EBH_MailingState__c = &#39;TX&#39;, IF(MID(Phone,2,3) = &quot;915&quot;,&quot;Mountain Standard Time&quot;,&quot;Central Standard Time&quot;),null)+ 
IF(EBH_MailingState__c = &#39;TN&#39;, IF(CASE(MID(Phone,2,3),&quot;865&quot;,1,&quot;423&quot;,1,0)&gt;=1,&quot;Eastern Standard Time&quot;, &quot;Central Standard Time&quot;),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>