unpackaged/main/default/objects/Contact/fields/Unique_Email__c.field-meta.xml
<CustomField>
    <fullName>Unique_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>US-0009237 - Migrate contact fields for EU ads</description>
    <label>Unique Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>