unpackaged/main/default/objects/Contact/fields/Unsuccessful_Outreaches__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Outreaches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[#EPH-6577] Count call attempts for GCX outreaches on Contact</description>
    <label>Unsuccessful Outreaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>