unpackaged/main/default/objects/Contact/recordTypes/EBH_DWH.recordType-meta.xml
<RecordType>
    <fullName>EBH_DWH</fullName>
    <active>true</active>
    <description>Contact that comes from DW Warehouse</description>
    <label>DWH</label>
</RecordType>