unpackaged/main/default/objects/Contact/recordTypes/EBH_GDPR_Removed.recordType-meta.xml
<RecordType>
    <fullName>EBH_GDPR_Removed</fullName>
    <active>true</active>
    <description>Only when Contact is GDPR Removed</description>
    <label>GDPR Removed</label>
</RecordType>