unpackaged/main/default/objects/Contact/recordTypes/EBH_MANUAL.recordType-meta.xml
<RecordType>
    <fullName>EBH_MANUAL</fullName>
    <active>true</active>
    <description>Record Type for Contact Manually Created</description>
    <label>MANUAL</label>
</RecordType>