unpackaged/main/default/objects/Contact/recordTypes/Seller_Portal.recordType-meta.xml
<RecordType>
    <fullName>Seller_Portal</fullName>
    <active>true</active>
    <label>Seller Portal</label>
</RecordType>