unpackaged/main/default/objects/Contact/validationRules/EBH_PreventContactEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>EBH_PreventContactEdit</fullName>
    <active>true</active>
    <description>EPH-3293, US-0007080</description>
    <errorConditionFormula>!ISNEW()&amp;&amp; 
OR( ISPICKVAL( EBH_Status__c , &#39;Pending Termination&#39;),
 ISPICKVAL ( EBH_Status__c, &#39;Deleted&#39;)) &amp;&amp;
!($Profile.Name ==&#39;Business Admin&#39; || $Profile.Name ==&#39;System Administrator&#39; || $Profile.Name ==&#39;System Administrator - Limited Privileges&#39;) &amp;&amp; NOT( $Setup.ActiveValidationRules__c.All_Validation_Rules_Deactivated__c )</errorConditionFormula>
    <errorMessage>Cannot edit a Contact that&#39;s Deleted or Pending Termination</errorMessage>
</ValidationRule>