unpackaged/main/default/objects/Contact/listViews/Contacts_with_Data_Issues.listView-meta.xml
<ListView>
    <fullName>Contacts_with_Data_Issues</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact_Data_Quality__c</columns>
    <columns>EBH_Segment__c</columns>
    <columns>EBH_GMV_12_months__c</columns>
    <columns>EBH_ActualStandard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Contact.EBH_GDPR_Removed</value>
    </filters>
    <filters>
        <field>Contact_Data_Quality__c</field>
        <operation>notEqual</operation>
        <value>Green</value>
    </filters>
    <label>Contacts with Data Issues</label>
</ListView>