unpackaged/main/default/objects/Contact/listViews/DE_Contacts.listView-meta.xml
<ListView>
    <fullName>DE_Contacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>EBH_Decision_Maker_Role__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>DE Contacts</label>
</ListView>